<resources>
    <string name="slingshot_version">1.0.2</string>
    <string name="app_name">Slingshot</string>
    <string name="str_splash">Slingshot</string>
    <string name="str_contactlist_title">Slingshot</string>
    <string name="str_contactlist_settings">Settings</string>
    <string name="str_contactlist_add">Add</string>
    <string name="str_contact_db_name">contact.db</string>
    <string name="str_contact_db_table">SipContact</string>
    <string name="str_contact_col_username">User name</string>
    <string name="str_contact_col_address">Account</string>
    <string name="str_contact_adddlg_title">Add new contact</string>
    <string name="str_contact_editdlg_title">Edit contact</string>
    <string name="str_contact_deldlg_title">Delete</string>
    <string name="str_contact_warning_invalid_account">"User name or address can not be blank"</string>
    <string name="str_start_videocall">Start Video Call</string>
    <string name="str_del_user">Delete user</string>
    <string name="str_contact_op">operate on</string>
    <string name="str_contact_name">ContactNameKey</string>
    <string name="str_contact_addr">ContactAddrKey</string>
    <string name="str_bundle_outgoing">outgoing_call</string>
    <string name="str_pref_username">username</string>
    <string name="str_pref_password">password</string>
    <string name="str_pref_domain">domain</string>
    <string name="str_pref_proxy">proxy</string>
    <string name="str_pref_port">port</string>
    <string name="str_pref_protocol">protocol</string>
    <string name="str_sipstatus_registering">Registering</string>
    <string name="str_sipstatus_registered">Registered</string>
    <string name="str_sipstatus_registerfail">Register Fail</string>
	<string name="contact_text_details">Details</string>
	<string name="contact_text_address">Address</string>
	<string name="contact_text_status">Status</string>
	<string name="contact_text_status_detail">offline</string>
	<string name="contact_text_edit_botton">Edit</string>
	<string name="contact_text_delete_botton">Delete</string>
	<string name="contact_text_history">History</string>
	<string name="contact_item_text_name">UserName</string>
	<string name="contactlist_footer_text_addone_menu_item_name">Add account</string>
	<string name="diag_incoming_call_text_btn_answser">Accept</string>
	<string name="diag_incoming_call_text_btn_replace">Accept(Replace)</string>
	<string name="diag_incoming_call_text_btn_deny">Decline</string>
	<string name="fragment_layout_statusbar_text">Not registered</string>
	<string name="fragment_layout_app_ver_text">Application version:</string>
	<string name="fragment_layout_sys_ver_text">System version:</string>
	<string name="diag_outgoing_call_text_btn_cancel">Cancel</string>
	<string name="incallview_loading_dialog_title">Loading...</string>
	<string name="incallview_text_sipLabel">default</string>
	<string name="incallview_text_waiting">Waiting on remote video...</string>
	<string name="incallview_control_panel_indicator_speaker">Speaker open/close</string>
	<string name="incallview_control_panel_indicator_camera">Camera open/close</string>
	<string name="incallview_control_panel_indicator_pip">PIP show/hide</string>
	<string name="incallview_control_panel_indicator_call_end">End call</string>
	<string name="incallview_control_panel_indicator_statistic">Show statistic</string>
	<string name="call_status_calling">Calling...</string>
	<string name="call_status_established">Call established</string>
	<string name="call_status_end">Call end!</string>
	<string name="call_status_busy">Call busy!</string>
	<string name="call_status_audio_only">Audio only!</string>
	<string name="selection_text_title">Slingshot</string>
	<string name="main_status_bar_text_connect">connected to </string>
	<string name="main_status_bar_text_disconnect">failed to connect</string>
	<string name="main_status_bar_text_connecting">connecting to </string>
	<string name="main_menu_item_contact">Contact</string>
	<string name="main_menu_item_settings">Settings</string>
	<string name="settings_main_item_user_account">User account</string>
	<string name="settings_main_item_user_account_des">Account info</string>
	<string name="settings_main_item_user_category_account_source">Account source</string>
	<string name="settings_main_item_user_category_local_setting">Local setting</string>
	<string name="key_settings_user_account_source">key_account_source</string>
	<string name="settings_user_account_source_title">Account source</string>
	<string name="settings_user_account_source_ims">IMS</string>
	<string name="settings_user_account_source_ims_title">From IMS server</string>
	<string name="settings_user_account_source_local">LOCAL</string>
	<string name="settings_user_account_source_local_title">From local setting</string>
	<string name="settings_user_account_source_default">IMS</string>
	<string name="settings_user_account_username">Enter username</string>
	<string name="settings_user_account_username_des">Username for your SIP account</string>
	<string name="settings_user_account_domain">Enter domain</string>
	<string name="settings_user_account_domain_des">Domain for your SIP account</string>
	<string name="settings_user_account_password">Enter password</string>
	<string name="settings_user_account_password_des">Password for your SIP account</string>
	<string name="settings_user_account_proxy">Enter proxy</string>
	<string name="settings_user_account_proxy_des">Proxy for your SIP account</string>
	<string name="settings_user_account_port">Enter port</string>
	<string name="settings_user_account_port_des">Port for SIP server</string>
	<string name="settings_user_account_protocol">Enter protocol</string>
	<string name="settings_user_account_protocol_des">Protocol used to connect to the SIP server</string>
	<string name="settings_main_item_video_profile">Video profile</string>
	<string name="settings_main_item_video_profile_des">Set profile for video recorder</string>
	 <string name="settings_video_category_video_encoder">Video encoding</string>
	 <string name="settings_video_category_camera">Camera</string>
    <string name="settings_video_codec_title">Video codec</string>
    <string name="settings_video_codec_title_des">Select video codec: "H.264", "MPEG4"</string>
    <string name="settings_video_codec_h264">H.264</string>
    <string name="settings_video_codec_mpeg4">MPEG4</string>
    <string name="settings_video_codec_default">H.264</string>
    <string name="settings_video_resolution_title">Resolution</string>
    <string name="settings_video_resolution_title_des">Select video resolution: "480p", "720p"</string>
    <string name="settings_video_resolution_480p">480p</string>
    <string name="settings_video_resolution_720p">720p</string>
    <string name="settings_video_resolution_default">480p</string>
    <string name="settings_video_framerate_title">Frame rate</string>
    <string name="settings_video_framerate_title_des">Set video frame rate: "15fps", "30fps"</string>
    <string name="settings_video_framerate_15">15fps</string>
    <string name="settings_video_framerate_30">30fps</string>
    <string name="settings_video_framerate_default">30fps</string>
    <string name="settings_video_bitrate_title">Bit rate</string>
    <string name="settings_video_bitrate_title_des">Select video bit rate: Low, Medium, etc</string>
    <string name="settings_video_bitrate_low">Low</string>
    <string name="settings_video_bitrate_low_title">Low</string>
    <string name="settings_video_bitrate_middle">Medium</string>
    <string name="settings_video_bitrate_middle_title">Medium</string>
    <string name="settings_video_bitrate_high">High</string>
    <string name="settings_video_bitrate_high_title">High</string>
    <string name="settings_video_bitrate_super">Super</string>
    <string name="settings_video_bitrate_super_title">Super</string>
    <string name="settings_video_bitrate_default">Medium</string>
    <string name="settings_video_camera_auto_focus">Auto focus</string>
    <string name="settings_video_camera_auto_focus_des">Enable/Disable camera auto-focus</string>
	<string name="settings_main_item_call">Call</string>
	<string name="settings_main_item_call_des">Call settings</string>
	<string name="settings_call_auto_answer">Enable auto-answer</string>
	<string name="settings_call_auto_answer_des">Auto answer any incoming call</string>
	<string name="settings_main_item_others">Others</string>
	<string name="settings_main_item_others_des">Other settings</string>
	<string name="dialog_nav_ok">OK</string>
	<string name="dialog_nav_cancel">Cancel</string>
	<string name="settings_others_reset">Factory reset</string>
	<string name="settings_others_reset_des">This operation would cause all user data to be deleted</string>
	<string name="settings_others_reset_dialog_title">Factory reset</string>
	<string name="settings_others_reset_dialog_warning">Warning: this operation would cause all user data to be deleted. Continue?</string>
	<string name="settings_others_reset_process_title">Starting factory reset...</string>
    <string name="settings_connection_protocol_tcp">TCP</string>
    <string name="settings_connection_protocol_udp">UDP</string>
    <string name="settings_connection_protocol_sctp">SCTP</string>
    <string name="settings_connection_protocol_tls">TLS</string>
    <string name="settings_connection_protocol_default">UDP</string>
    <string name="camera_error_dialog_title">Camera Error</string>
    <string name="camera_error_dialog_connection">Can not connect the camera device! Call failed!</string>
    <string name="camera_error_dialog_preview">Can not start camera preview! Call failed!</string>
    <string name="camera_error_dialog_ok">OK</string>
    <string name="ims_error_title">IMS Error</string>
    <string name="ims_error_content">Can not find IMS client</string>
    <string name="network_error_dialog_title">Network Error</string>
    <string name="network_error_dialog_message">Can not connect to video call service. Please check your network or connect Service provider</string>
    <string name="network_error_dialog_ok">OK</string>
    <string name="network_error_dialog_hotplug_title">Network Error</string>
    <string name="network_error_dialog_hotplug_message">Network cable is unplugged. Please check</string>
    <string name="stat_group_title_data_out">Data sending out</string>
    <string name="stat_group_title_data_in">Data receiving</string>
    <string name="stat_name_total_loss_rate">Total loss rate</string>
    <string name="stat_name_current_loss_rate">Current loss rate</string>
    <string name="stat_name_jitter">Jitter</string>
    <string name="stat_name_bit_rate">Channel bit rate</string>
    <string name="stat_unit_rate">%</string>
    <string name="stat_unit_ms">ms</string>
    <string name="stat_unit_kbps">kbps</string>
    <string name="sip_error_des_CLIENT_ERROR">Some error occurs on the device, possibly due to a bug</string>
    <string name="sip_error_des_CROSS_DOMAIN_AUTHENTICATION">Cross-domain authentication required</string>
    <string name="sip_error_des_DATA_CONNECTION_LOST">Data connection is lost</string>
    <string name="sip_error_des_INVALID_CREDENTIALS">Invalid credentials are provided</string>
    <string name="sip_error_des_INVALID_REMOTE_URI">The remote URI is not valid</string>
    <string name="sip_error_des_IN_PROGRESS">The client is in a transaction and cannot initiate a new one</string>
    <string name="sip_error_des_NO_ERROR">Not an error</string>
    <string name="key_video_resolution">video_resolution</string>
    <string name="key_video_frame_rate">video_frameRate</string>
    <string name="key_video_bit_rate">video_bitRate</string>
    <string name="key_camera_auto_focus">camera_autoFocus</string>
	 <string name="diag_outgoing_btn_switcher_num">N</string>
	 <string name="diag_outgoing_btn_switcher_slash">/</string>
	 <string name="diag_outgoing_btn_switcher_eng">E</string>
</resources>